# emacs-i3

./: Cargo.toml  LICENSE  README.md  default.nix  flake.nix
elisp/: emacs-i3.el
nix/pkgs/: default.nix  emacs-i3.nix
src/: emacs.rs  main.rs
