[package]
name = "emacs-i3"
version = "0.1.2"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.47"
clap = "2.33.3"

[dependencies.i3ipc]
version = "0.10.1"
features = ["i3-4-14"]

[patch.crates-io]
i3ipc = { git = "https://github.com/c0deaddict/i3ipc-rs", branch = "fix/window-properties" }